--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,15 @@ title: ramblings
 tagline: scholarly and otherwise
 email: teacherjanelle@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hands on keyboard. Write. Sometimes badly.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+Hands on keyboard. Write. Sometimes badly.
+baseurl: "/JNLB" # the subpath of your site, e.g. /blog/
+url: "/rambling" # the base hostname & protocol for your site
 twitter_username: teacherjanelle
 github_username:  teacherjanelle
 
 # Build settings
 markdown: kramdown
+permalink: pretty
+
+
+
